<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DiningPhilosophers</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="aristotle">Aristotle: </string>
    <string name="max">Max Cherem: </string>
    <string name="confucius">Confucius: </string>
    <string name="chris">Chris Latiolais: </string>
    <string name="plato">Plato: </string>
    <string name="title_activity_status">StatusActivity</string>
    <string name="thinking">Thinking</string>
    <string name="waiting">Waiting</string>
    <string name="eating">Eating</string>

</resources>
