<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".StatusActivity" >

        
    <ListView
        android:id="@+id/actionList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    
    <TableLayout
        android:id="@+id/timeTable"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
        
        <TableRow
            android:id="@+id/timeTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView 
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="" />
            
            <TextView 
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/thinking" />
            <TextView 
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/waiting" />
            <TextView 
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/eating" />
           
        </TableRow>
        
        <TableRow
            android:id="@+id/aristotleTimes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView 
                android:id="@+id/aristotleName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/aristotle" />
            
            <TextView 
                android:id="@+id/aristotleThinking"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <TextView 
                android:id="@+id/aristotleWaiting"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <TextView 
                android:id="@+id/aristotleEating"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
           
        </TableRow>
        
        <TableRow
            android:id="@+id/maxTimes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView 
                android:id="@+id/maxName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/max" />
            
            <TextView 
                android:id="@+id/maxThinking"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <TextView 
                android:id="@+id/maxWaiting"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <TextView 
                android:id="@+id/maxEating"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
           
        </TableRow>
        
        <TableRow
            android:id="@+id/confuciusTimes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView 
                android:id="@+id/confuciusName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/confucius" />
            
            <TextView 
                android:id="@+id/confuciusThinking"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <TextView 
                android:id="@+id/confuciusWaiting"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <TextView 
                android:id="@+id/confuciusEating"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
           
        </TableRow>
        
        <TableRow
            android:id="@+id/chrisTimes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView 
                android:id="@+id/chrisName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/chris" />
            
            <TextView 
                android:id="@+id/chrisThinking"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <TextView 
                android:id="@+id/chrisWaiting"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <TextView 
                android:id="@+id/chrisEating"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
           
        </TableRow>
        
        <TableRow
            android:id="@+id/platoTimes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView 
                android:id="@+id/platoName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/plato" />
            
            <TextView 
                android:id="@+id/platoThinking"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <TextView 
                android:id="@+id/platoWaiting"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <TextView 
                android:id="@+id/platoEating"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
           
        </TableRow>
        
    </TableLayout>

    <!--GridView
        android:id="@+id/timeGrid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:columnWidth="20dp"
        android:gravity="left"
        android:horizontalSpacing="10dp"
        android:numColumns="4"
        android:verticalSpacing="10dp" >
    </GridView-->

</LinearLayout>
